# PicoMemcard

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  memcard_simulator.c  memcard_sniffer.c  memmap.ld  memory_card.c  memory_card.h  psxSPI copy.pio  psxSPI.pio  test.c  ws2812.pio
docs/images/EmptyMemoryCard/: MEMCARD.MCR
docs/images/SampleMemoryCard/: MEMCARD.MCR
ff14b/source/: diskio.c  diskio.h  ffconf.h
inc/: DEV_Config.h  DEV_Config.h.gch  LCD_0in96.h  config.h  font.h  freepsxboot_raw.h  lcd.h  led.h  lfs_disk.h  lfs_flash_handler.h  mc_raw.h  memcard_manager.h  memcard_simulator.h  memcard_simulator_sm.h  memory_card.h  pad.h  pmcsplash.h  ram_disk.h  sd_config.h  tusb_config.h
pcb/PicoMemcard-pico/: PicoMemcard-pico.kicad_pcb  PicoMemcard-pico.kicad_prl  PicoMemcard-pico.kicad_pro  PicoMemcard-pico.kicad_sch
pcb/PicoMemcard-pico/Gerber/: PicoMemcard-pico-B_Cu.gbr  PicoMemcard-pico-B_Mask.gbr  PicoMemcard-pico-B_Paste.gbr  PicoMemcard-pico-B_Silkscreen.gbr  PicoMemcard-pico-Edge_Cuts.gbr  PicoMemcard-pico-F_Cu.gbr  PicoMemcard-pico-F_Mask.gbr  PicoMemcard-pico-F_Paste.gbr  PicoMemcard-pico-F_Silkscreen.gbr  PicoMemcard-pico-NPTH-drl_map.ps  PicoMemcard-pico-NPTH.drl  PicoMemcard-pico-PTH-drl_map.ps  PicoMemcard-pico-PTH.drl  PicoMemcard-pico-job.gbrjob
pcb/PicoMemcard-rp2040zero/: PicoMemcard-rp2040zero.kicad_pcb  PicoMemcard-rp2040zero.kicad_prl  PicoMemcard-rp2040zero.kicad_pro  PicoMemcard-rp2040zero.kicad_sch
pcb/PicoMemcard-rp2040zero/Gerber/: PicoMemcard-rp2040zero-B_Cu.gbr  PicoMemcard-rp2040zero-B_Mask.gbr  PicoMemcard-rp2040zero-B_Paste.gbr  PicoMemcard-rp2040zero-B_Silkscreen.gbr  PicoMemcard-rp2040zero-Edge_Cuts.gbr  PicoMemcard-rp2040zero-F_Cu.gbr  PicoMemcard-rp2040zero-F_Mask.gbr  PicoMemcard-rp2040zero-F_Paste.gbr  PicoMemcard-rp2040zero-F_Silkscreen.gbr  PicoMemcard-rp2040zero-NPTH-drl_map.ps  PicoMemcard-rp2040zero-NPTH.drl  PicoMemcard-rp2040zero-PTH-drl_map.ps  PicoMemcard-rp2040zero-PTH.drl  PicoMemcard-rp2040zero-job.gbrjob
poc_examples/: CMakeLists.txt  controller_simulator.c  memcard_sniffer.c
poc_examples/controller_simulator/: CMakeLists.txt  controller_simulator.c
poc_examples/memcard_sniffer/: CMakeLists.txt  memcard_sniffer.c
src/: DEV_Config.c  LCD_0in96.c  lcd.c  led.c  lfs_disk.c  lfs_flash_handler.c  main.c  memcard_manager.c  memcard_simulator.c  memcard_simulator_sm.c  memory_card.c  msc_handler.c  ram_disk.c  sd_config.c  usb_descriptors.c
ssd1331-driver/: CMakeLists.txt
ssd1331-driver/include/: ssd1331.h
ssd1331-driver/src/: ssd1331.c
